// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should render the embed header 1`] = `
<div
  className=""
>
  <div
    className="c-dashboard__heading o-max-width"
  >
    <div
      className="o-max-width__inner"
    >
      <div
        className="qa-dashboard__embed-header"
      >
        <AngularWrapper
          bindings={
            Object {
              "closeAction": Object {
                "meta": Object {
                  "tracking": true,
                },
                "type": "ui/HIDE_EMBED_PREVIEW",
              },
            }
          }
          component="dpEmbedHeader"
          dependencies={
            Array [
              "atlas",
            ]
          }
          interpolateBindings={Object {}}
          moduleName="dpHeaderWrapper"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Header should render the main header 1`] = `
<section
  className="styled-header"
>
  <Header
    css={
      Array [
        "
  input {
    line-height: 1;
  }
  
  ",
        ".sc-bRBYWo",
        " {
    @media screen and ",
        [Function],
        " {
      display: none;
    }
  }

  ",
        ".sc-jDwBTQ",
        " fieldset > ",
        ".sc-csuQGl",
        " {
    @media screen and ",
        [Function],
        " {
      display: none;
    }

    flex-grow: 1;

    ",
        ".sc-gipzik",
        " {
      flex-grow: 0;
      width: 100%;
      max-width: 450px;
    }
  }

  ",
        ".sc-hSdWYo",
        " {
    @media screen and ",
        [Function],
        " {
      display: none;
    }
  }

  ",
        ".sc-kpOJdX",
        " {
    @media screen and ",
        [Function],
        " {
      display: none;
    }
  }
",
      ]
    }
    fullWidth={true}
    homeLink="/"
    navigation={
      <React.Fragment>
        <Connect(HeaderSearch) />
        <MenuContainer />
        <MenuMobile />
      </React.Fragment>
    }
    tall={false}
    title="Data en informatie"
  />
</section>
`;

exports[`Header should render the print header 1`] = `
<div
  className=""
>
  <div
    className="c-dashboard__heading o-max-width"
  >
    <div
      className="o-max-width__inner"
    >
      <div
        className="qa-dashboard__print-header"
      >
        <AngularWrapper
          bindings={
            Object {
              "closeAction": Object {
                "meta": Object {
                  "tracking": true,
                },
                "type": "ui/HIDE_PRINT",
              },
            }
          }
          component="dpPrintHeader"
          dependencies={
            Array [
              "atlas",
            ]
          }
          interpolateBindings={Object {}}
          moduleName="dpHeaderWrapper"
        />
      </div>
    </div>
  </div>
</div>
`;
